--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ function getUrlParameter(name){
             return results[1];
         }
     };
+      getUrlParam('conferId')
     </script>
+
 hello wordld
 </body>
 </html>
