--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ function getUrlParameter(name){
             return results[1];
         }
     };
-      getUrlParam('conferId')
+     getUrlParameter('conferId')
     </script>
 
 hello wordld
