--- a/index.html
+++ b/index.html
@@ -6,19 +6,7 @@
 </head>
 
 <body>
-  <script>
-function getUrlParameter(name){
-        name = name.replace(/[]/,"\[").replace(/[]/,"\[").replace(/[]/,"\\\]");
-        var regexS = "[\\?&]"+name+"=([^&#]*)";
-        var regex = new RegExp( regexS );
-        var results = regex.exec(window.parent.location.href );
-        if( results == null ) return ""; else {
-            return results[1];
-        }
-    };
-     getUrlParameter('conferId')
-    </script>
 
-hello wordld
+hello world
 </body>
 </html>
